@@ -20,10 +20,7 @@
 package org.gjt.sp.jedit;
 
 import gnu.regexp.*;
-import javax.swing.text.BadLocationException;
-import javax.swing.text.Element;
 import org.gjt.sp.jedit.syntax.TokenMarker;
-import org.gjt.sp.jedit.textarea.*;
 import org.gjt.sp.jedit.*;
 import org.gjt.sp.util.Log;
 
@@ -74,203 +71,6 @@ public class Mode
 		}
 
 		initKeyBindings();
-	}
-
-	/**
-	 * Called when a buffer enters this mode.
-	 * @param buffer The buffer that entered this mode
-	 */
-	public void enter(Buffer buffer) {}
-
-	/**
-	 * Called when a view enters this mode.
-	 * @param view The view that entered this mode
-	 */
-	public void enterView(View view) {}
-
-	/**
-	 * Called when a buffer leaves this mode.
-	 * @param buffer The buffer that left this mode
-	 */
-	public void leave(Buffer buffer) {}
-	
-	/**
-	 * Called when a view leaves this mode.
-	 * @param view The view that left this mode
-	 */
-	public void leaveView(View view) {}
-
-	/**
-	 * If auto indent is enabled, this method is called when the `Tab'
-	 * or `Enter' key is pressed to perform mode-specific indentation
-	 * and return true, or return false if a normal tab is to be inserted.
-	 * @param buffer The buffer where the tab key was pressed
-	 * @param view The view where the tab key was pressed
-	 * @param line The line number to indent
-	 * @param force If true, the line will be indented even if it already
-	 * has the right amount of indent
-	 * @return true if the tab key event should be swallowed (ignored)
-	 * false if a real tab should be inserted
-	 */
-	public boolean indentLine(Buffer buffer, View view,
-		int lineIndex, boolean force)
-	{
-		// Use JEditTextArea's line access methods
-		JEditTextArea textArea = view.getTextArea();
-
-		// Get properties
-		String openBrackets = (String)getProperty("indentOpenBrackets");
-		String closeBrackets = (String)getProperty("indentCloseBrackets");
-		if(openBrackets == null)
-			openBrackets = "";
-		if(closeBrackets == null)
-			closeBrackets = "";
-		int tabSize = buffer.getTabSize();
-		boolean noTabs = "yes".equals(buffer.getProperty("noTabs"));
-
-		if(lineIndex == 0)
-			return false;
-
-		// Get line text
-		String line = textArea.getLineText(lineIndex);
-		int start = textArea.getLineStartOffset(lineIndex);
-		String prevLine = null;
-		for(int i = lineIndex - 1; i >= 0; i--)
-		{
-			if(textArea.getLineLength(i) != 0)
-			{
-				prevLine = textArea.getLineText(i);
-				break;
-			}
-		}
-
-		if(prevLine == null)
-			return false;
-
-		/*
-		 * On the previous line,
-		 * if(bob) { --> +1
-		 * if(bob) { } --> 0
-		 * } else if(bob) { --> +1
-		 */
-		boolean prevLineStart = true; // False after initial indent
-		int prevLineIndent = 0; // Indent width (tab expanded)
-		int prevLineBrackets = 0; // Additional bracket indent
-		for(int i = 0; i < prevLine.length(); i++)
-		{
-			char c = prevLine.charAt(i);
-			switch(c)
-			{
-			case ' ':
-				if(prevLineStart)
-					prevLineIndent++;
-				break;
-			case '\t':
-				if(prevLineStart)
-				{
-					prevLineIndent += (tabSize
-						- (prevLineIndent
-						% tabSize));
-				}
-				break;
-			default:
-				prevLineStart = false;
-				if(closeBrackets.indexOf(c) != -1)
-					prevLineBrackets = Math.max(
-						prevLineBrackets-1,0);
-				else if(openBrackets.indexOf(c) != -1)
-					prevLineBrackets++;
-				break;
-			}
-		}
-
-		/*
-		 * On the current line,
-		 * } --> -1
-		 * } else if(bob) { --> -1
-		 * if(bob) { } --> 0
-		 */
-		boolean lineStart = true; // False after initial indent
-		int lineIndent = 0; // Indent width (tab expanded)
-		int lineWidth = 0; // White space count
-		int lineBrackets = 0; // Additional bracket indent
-		int closeBracketIndex = -1; // For lining up closing
-			// and opening brackets
-		for(int i = 0; i < line.length(); i++)
-		{
-			char c = line.charAt(i);
-			switch(c)
-			{
-			case ' ':
-				if(lineStart)
-				{
-					lineIndent++;
-					lineWidth++;
-				}
-				break;
-			case '\t':
-				if(lineStart)
-				{
-					lineIndent += (tabSize
-						- (lineIndent
-						% tabSize));
-					lineWidth++;
-				}
-				break;
-			default:
-				lineStart = false;
-				if(closeBrackets.indexOf(c) != -1)
-				{
-					if(lineBrackets == 0)
-						closeBracketIndex = i;
-					else
-						lineBrackets--;
-				}
-				else if(openBrackets.indexOf(c) != -1)
-					lineBrackets++;
-				break;
-			}
-		}
-
-		try
-		{
-			if(closeBracketIndex != -1)
-			{
-				int offset = TextUtilities.findMatchingBracket(
-					buffer,start + closeBracketIndex);
-				if(offset != -1)
-				{
-					String closeLine = textArea.getLineText(
-						textArea.getLineOfOffset(offset));
-					prevLineIndent = MiscUtilities
-						.getLeadingWhiteSpaceWidth(
-						closeLine,tabSize);
-				}
-				else
-					return false;
-			}
-			else
-			{
-				prevLineIndent += (prevLineBrackets * tabSize);
-			}
-
-			// Insert a tab if line already has correct indent
-			// and force is not set
-			if(!force && lineIndent >= prevLineIndent)
-				return false;
-
-			// Do it
-			buffer.remove(start,lineWidth);
-			buffer.insertString(start,MiscUtilities.createWhiteSpace(
-				prevLineIndent,(noTabs ? 0 : tabSize)),null);
-			return true;
-		}
-		catch(BadLocationException bl)
-		{
-			Log.log(Log.ERROR,this,bl);
-		}
-
-		return false;
 	}
 
 	/**
@@ -387,25 +187,18 @@ public class Mode
 		}
 	}
 
-	// protected members
-
-	/**
-	 * @since jEdit 2.2pre1
-	 */
-	protected RE filenameRE;
-
-	/**
-	 * @since jEdit 2.2pre1
-	 */
-	protected RE firstlineRE;
-
 	// private members
 	private String name;
+	private RE firstlineRE;
+	private RE filenameRE;
 }
 
 /*
  * ChangeLog:
  * $Log$
+ * Revision 1.21  2000/03/20 06:06:36  sp
+ * Mode internals cleaned up
+ *
  * Revision 1.20  2000/01/29 08:18:08  sp
  * bug fixes, misc updates
  *
@@ -435,18 +228,5 @@ public class Mode
  *
  * Revision 1.11  1999/05/26 04:46:03  sp
  * Minor API change, soft tabs fixed ,1.7pre1
- *
- * Revision 1.10  1999/05/22 08:33:53  sp
- * FAQ updates, mode selection tweak, patch mode update, javadoc updates, JDK 1.1.8 fix
- *
- * Revision 1.9  1999/04/19 05:47:35  sp
- * ladies and gentlemen, 1.6pre1
- *
- * Revision 1.8  1999/03/21 07:53:14  sp
- * Plugin doc updates, action API change, new method in MiscUtilities, new class
- * loader, new plugin interface
- *
- * Revision 1.7  1999/03/12 07:23:19  sp
- * Fixed serious view bug, Javadoc updates
  *
  */
